<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/moonlight_background"
    android:padding="10dp">

    <Button
        android:id="@+id/bt_vibrator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug_info_test_device_vibration" />

    <Button
        android:id="@+id/bt_update_gamepad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug_info_refresh_gamepad_list" />

    <Button
        android:id="@+id/bt_vibrator_gamepad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/debug_info_test_gamepad_rumble" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_vibrator_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/debug_info_vibration_amplitude" />

        <Button
            android:id="@+id/bt_vibrator_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/debug_info_stop_vibration" />

    </LinearLayout>

    <TextView
        android:id="@+id/tx_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/moonlight_foreground"
        android:paddingTop="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tx_game_pad_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/moonlight_foreground" />
    </ScrollView>

</LinearLayout>
